# nemu

./: .env  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  Justfile  LICENSE  LICENSE-ART  README.md  SECURITY.md  biome.json  docker-compose.dev.yml  drizzle.config.ts  env.ts  eslint.config.js  jest.config.ts  microfrontends.json  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  turbo.json  vercel.json
@types/: next-auth.d.ts  process-env.d.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/core/: Cargo.toml  package.json  turbo.json
apps/core/migrations/2026-07-11-000001-0000_rooms/: up.sql
apps/core/migrations/2026-07-11-000002-0000_devices_extend/: down.sql  up.sql
apps/core/migrations/2026-07-11-000003-0000_device_events/: down.sql  up.sql
apps/core/scripts/: dev.sh
apps/core/src/: client.rs  commands.rs  config.rs  events.rs  main.rs  state.rs
apps/core/src/api/: devices.rs  error.rs  health.rs  mod.rs  rooms.rs  router.rs  ws.rs  zigbee.rs
apps/core/src/db/: models.rs  schema.rs
apps/core/src/devices/: mod.rs  registry.rs  state_cache.rs
apps/core/src/mqtt/: connection.rs  mod.rs  z2m.rs
apps/nemu-core/: Cargo.toml
apps/nemu-core/src/db/: models.rs  schema.rs
components/: ArtistProvider.tsx  ClientTestComponent.tsx  Footer.jsx  Footer.tsx  Navbar.jsx  SWRProvider.tsx  artist-provider.tsx  button.tsx  (+8 more)
(+1176 files in other folders)
