[package]
name = "nemu-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
diesel = { version = "2.3.10", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = "0.9.2"
dotenvy = "0.15.7"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
